# notifyme

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_.md  changelog.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-manual.yml  build.yml  main.yml
apib/: README.md  doc.apib  notifyme.apib  package.json
apib/public/: index.html
examples/: docker-compose.all-in-one.yml  docker-compose.custom-target.yml  docker-compose.default-target.yml  docker-compose.minimal.yml
scripts/: healthcheck.py
src/: __init__.py  config.py  exceptions.py  logging.py  main.py  schemas.py
src/tests/: conftest.py  test.py
