[tool.poetry]
name = "notifyme"
version = "1.2.0"
description = "A very simple apprise-based notification microservice."
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
apprise = "1.3.0"
fastapi = {extras = ["all"], version = "0.94.0"}
uvicorn = {extras = ["standard"], version = "0.21.0"}
sentry-sdk = {extras = ["fastapi"], version = "1.16.0"}
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.11.4"
flake8-isort = "^6.0.0"
ipython = "^8.8.0"
types-requests = "2.28.11.7"

[tool.black]
line-length = 120
include = ".pyi?$"
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
files = "**/*.py"
follow_imports = "silent"
ignore_missing_imports = true
plugins = [ "pydantic.mypy" ]
show_column_numbers = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.flake8]
ignore = "E203,E266,H106,H904"
max-line-length = 120
exit-zero = true
exclude = " .git,__pycache__ "

[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
